@@ -1,4 +1,4 @@
 #include <config.h>
 #include <gsl_statistics.h>
 
-#include "pooled_variance_source.c"
+#include "p_variance_source.c"
